Ft notifications for request updates (#64)
* changed content of .hound.yml

* [fix]: changed route naming convention

* [feat] Added api to update the title(name) of an existing role

* [fix]: fixed user role middlewares

* [fix]: resolving changes

* [fix]: fixed auth middlewares

* [feat] Added all roles to the database

* [fix]: fixed auth middlewares

* [feat] Run the latest coverage for chore/#182215585-user-role-settings branch

* [feat] Run tests for POST and PATCH endpoints of roles

* [feat] Added DELETE route tests for roles and one more Test for PATCH route of roles + Added the coverage for all role endpoints

* Resolve conflicts between chore/#182215585-user-role-settings and develop branches

* [feat] Run coverage for all roles endpoints

* Update README.md

* added get and create accommodation feature

* added uuid fiels

* added more fields

* cloudinary-image-upload

* added travelAdminCheck middleware

* fixed bugs

* added edit accommodation api

* added missing API

* fixed a bug

* fixed a bug

* fixed test issues

* feat(roles): run coverage and fix the POST route tests

* only travel admins could perform CRUD on accommodation APIs

* bug-fix

* changed naming

* Attempt to resolve test conflicts

* fix

* removed trailing spaces

* fix

* fix

* fix

* fix

* fix

* fix

* fix

* changed model name

* notification controller

* debugging

* fix

* fixed bugs in notification controller and model

* added socket

* bug fix

* documented swagger

* notifications via email

* fix

* commented booking.test

* Update emailConfig.js

* fix

* fix

* fix

* fix

* fix

* fix

* fix

* fix

* fix
