# public/api-docs.json
@@ -18,7 +18,7 @@
     "host": "localhost:8001",
     "basePath": "/api",
     "paths": {
-        "v1/api/user/users": {
+        "api/v1/users": {
             "get": {
                 "summary": "Get users",
                 "description": "Get users",
@@ -36,7 +36,7 @@
                 }
             }
         },
-        "v1/api/user/users/{uuid}": {
+        "api/v1/users/{uuid}": {
             "get": {
                 "summary": "Get user",
                 "description": "Get user",
@@ -54,7 +54,25 @@
                 }
             }
         },
-        "v1/api/user/updateuser/{uuid}":{
+        "api/v1/users/{uuid}/logout": {
+            "get": {
+                "summary": "User logout",
+                "description": "User logout",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [],
+                "responses": {
+                    "200": {
+                        "description": "User logged out successfully"
+                    },
+                    "500": {
+                        "description": "Server error"
+                    }
+                }
+            }
+        },
+        "api/v1/users/updateuser/{uuid}":{
             "put": {
                 "summary": "Update User",
                 "description": "Update User",
@@ -82,7 +100,7 @@
                 }
             }
         },
-        "/v1/trips/all": {
+        "api/v1/trips/all": {
             "get": {
               "tags": [
                 "TripRequest"
@@ -96,7 +114,9 @@
                   "description": "Internal Server Error"
                 }
               }
-            },
+            }
+          },
+        "api/v1/trips/create": {    
             "post": {
               "tags": [
                 "TripRequest"
@@ -161,7 +181,7 @@
             }
           },
       
-          "v1/api/trips/{id}": {
+          "api/v1/trips/{id}": {
             "put": {
               "tags": [
                 "TripRequest"
@@ -259,6 +279,97 @@
               ]
             }
           },
+          "api/v1/trips/{tripId}/comments": {
+            "post": {
+              "tags": [
+                "TripRequestComponent"
+              ],
+              "description": "",
+              "parameters": [
+                {
+                  "name": "tripId",
+                  "in": "path",
+                  "required": true,
+                  "type": "string"
+                },
+                {
+                  "name": "obj",
+                  "in": "body",
+                  "required": true,
+                  "schema": {
+                    "$ref":"#/definitions/TripRequestComment"
+                  }
+                }
+              ],
+              "responses": {
+                "201": {
+                  "description": "Comment added"
+                },
+                "400": {
+                  "description": "Bad Request"
+                },
+                "500": {
+                  "description": "Internal Server Error"
+                }
+              },
+              "security": [
+                {
+                  "Authorization": []
+                }
+              ]
+            },
+            "get":{
+              "tags": [
+                "TripRequestComponent"
+              ],
+              "description": "",
+              "parameters": [
+                {
+                  "name": "tripId",
+                  "in": "path",
+                  "required": true,
+                  "type": "string"
+                }
+              ],
+              "responses": {
+                "201": {
+                  "description": "Comments fetched successfully"
+                }
+              }  
+            }
+          },      
+          "api/v1/trips/{tripId}/comments/{uuid}": {
+            "delete": {
+              "tags": [
+                "TripRequestComponent"
+              ],
+              "description": "",
+              "parameters": [
+                {
+                  "name": "tripId",
+                  "in": "path",
+                  "required": true,
+                  "type": "string"
+                }
+              ],
+              "responses": {
+                "200": {
+                  "description": "Comment deleted successfully!"
+                },
+                "404": {
+                  "description": "Not found"
+                },
+                "500": {
+                  "description": "Internal Server Error"
+                }
+              },
+              "security": [
+                {
+                  "Authorization": []
+                }
+              ]
+            }
+          },      
         "/api/v1/feedback": {
           "post": {
             "tags": ["Feedback"],
@@ -282,6 +393,311 @@
                   }
                 }
               ]  
+          }
+        },
+        "/api/v1/chat": {
+          "get":{
+            "tags": [
+              "Users's chat"
+            ],
+            "description": "Get all Rooms",
+            "parameters": [],
+            "responses": {
+              "200": {
+                "description": "Rooms fetched successfully"
+              }
+            },
+            "security": [
+              {
+                "Authorization": []
+              }
+            ]  
+          },
+          "post": {
+            "tags": [
+              "Users's chat"
+            ],
+            "description": "Add new Room",
+            "parameters": [
+              {
+                "name": "obj",
+                "in": "body",
+                "required": true,
+                "schema": {
+                  "$ref":"#/definitions/NewChatRoom"
+                }
+              }
+            ],
+            "responses": {
+              "201": {
+                "description": "Room added successfully"
+              },
+              "400": {
+                "description": "Bad Request"
+              },
+              "500": {
+                "description": "Internal Server Error"
+              }
+            },
+            "security": [
+              {
+                "Authorization": []
+              }
+            ]
+          }
+        },      
+        "api/v1/chat/:chatRoomId/messages": {
+          "post": {
+            "tags": [
+              "Users's chat"
+            ],
+            "description": "Add new messages",
+            "parameters": [
+              {
+                "name":"chatRoomId",
+                "in":"path",
+                "required":"true"
+              },
+              {
+                "name": "obj",
+                "in": "body",
+                "required": true,
+                "schema": {
+                  "$ref":"#/definitions/NewChatMessage"
+                }
+              }
+            ],
+            "responses": {
+              "201": {
+                "description": "Message added successfully"
+              },
+              "400": {
+                "description": "Bad Request"
+              },
+              "500": {
+                "description": "Internal Server Error"
+              }
+            },
+            "security": [
+              {
+                "Authorization": []
+              }
+            ]
+          },
+          "get":{
+            "tags": [
+              "Users's chat"
+            ],
+            "description": "Get all Messages",
+            "parameters": [],
+            "responses": {
+              "200": {
+                "description": "Messages fetched successfully"
+              },
+              "400": {
+                "description": "Bad Request"
+              },
+              "500": {
+                "description": "Internal Server Error"
+              }
+            },
+            "security": [
+              {
+                "Authorization": []
+              }
+            ]  
+          }          
+        },
+        "api/v1/chat/:chatRoomId/messages/new":{
+          "get":{
+            "tags": [
+              "Users's chat"
+            ],
+            "description": "Get Latest Messages",
+            "parameters": [],
+            "responses": {
+              "200": {
+                "description": "Messages fetched successfully"
+              },
+              "400": {
+                "description": "Bad Request"
+              },
+              "500": {
+                "description": "Internal Server Error"
+              }
+            },
+            "security": [
+              {
+                "Authorization": []
+              }
+            ]  
+          } 
+        },
+        "api/v1/notifications": {
+          "get": {
+            "tags": ["Notification"],
+            "description": "get all notifications of a user",
+              "consumes": [
+                "multipart/form-data"
+              ],
+              "produces":[
+                "application/json"
+              ],
+              "parameters": [
+                {
+                  "in":"header",
+                  "name":"Authorization",
+                  "description":"JWT Token of the user",
+                  "type":"string",
+                  "required":"true"
+              }
+              ],
+              "responses": {
+                "200": {
+                    "description": "Success"
+                },
+                "201": {
+                    "description": "Created"
+                },
+                "400": {
+                    "description": "Invalid data"
+                },
+                "500": {
+                    "description": "Internal server error"
+                }
+            }  
+          }
+        },
+
+        "api/v1/notifications/new":{
+          "post":{
+            "tags":["Notification"],
+            "description":"create a notification",
+            "produces": [
+              "application/json"
+          ],
+            "parameters": [
+              {
+                "name": "title",
+                "in": "formData",
+                "required": true,
+                "type": "string"
+              },
+              {
+                "name": "description",
+                "in": "formData",
+                "required": true,
+                "type": "string"
+              },
+              {
+                "name": "to",
+                "in": "formData",
+                "required": true,
+                "type": "string"
+              }
+            ],
+            "responses": {
+              "200": {
+                  "description": "Success"
+              },
+              "400": {
+                  "description": "Invalid data"
+              },
+              "404": {
+                  "description": "Not found"
+              },
+              "500": {
+                  "description": "Internal server error"
+              }
+          } 
+          }
+        },
+
+        "api/v1/notifications/read/{notificationId}":{
+          "post":{
+            "tags":["Notification"],
+            "description":"read a notification",
+            "produces": [
+              "application/json"
+          ],
+            "parameters":[
+              {
+                "name":"notificationId",
+                "in": "path",
+                "required": true,
+                "type": "string"
+               }
+            ],
+            "responses": {
+              "200": {
+                  "description": "Success"
+              },
+              "400": {
+                  "description": "Invalid data"
+              },
+              "404": {
+                  "description": "Not found"
+              },
+              "500": {
+                  "description": "Internal server error"
+              }
+          }
+          }
+        },
+        "api/v1/notifications/readAll":{
+          "post":{
+            "tags":["Notification"],
+            "description":"read all notifications",
+            "produces": [
+              "application/json"
+          ],
+            "parameters":[],
+            "responses": {
+              "200": {
+                  "description": "Success"
+              },
+              "400": {
+                  "description": "Invalid data"
+              },
+              "404": {
+                  "description": "Not found"
+              },
+              "500": {
+                  "description": "Internal server error"
+              }
+          }
+          }
+        },
+
+        "api/v1/notifications/{notificationId}":{
+          "delete": {
+            "tags": ["Notification"],
+            "description": "delete notification by id",
+            "produces": [
+              "application/json"
+          ],
+              "parameters": [
+               {
+                "name":"notificationId",
+                "in": "path",
+                "required": true,
+                "type": "string"
+               }
+              ]  ,
+              "responses": {
+                "200": {
+                    "description": "Success"
+                },
+                "400": {
+                    "description": "Invalid data"
+                },
+                "404": {
+                    "description": "Not found"
+                },
+                "500": {
+                    "description": "Internal server error"
+                }
+            }
           }
         }
          
@@ -336,6 +752,33 @@
                     "required": true
                 },
                 "status": {
+                    "type": "string",
+                    "required": true
+                }
+            }
+        },
+        "TripRequestComment": {
+            "type": "object",
+            "properties": {                
+                "comment": {
+                    "type": "string",
+                    "required": true
+                }
+            }
+        },
+        "NewChatRoom": {
+            "type": "object",
+            "properties": {                
+                "name": {
+                    "type": "string",
+                    "required": true
+                }
+            }
+        },
+        "NewChatMessage": {
+            "type": "object",
+            "properties": {                
+                "message": {
                     "type": "string",
                     "required": true
                 }
