# src/index.js
@@ -19,6 +19,7 @@ import feedbackRouter from './routes/feedback.routes';
 import companiesRouter from './routes/company.routes';
 import bookingsRouter from './routes/booking.routes';
 import accommodationRouter from './routes/accommodation.routes';
+import notificationRouter from './routes/notification.routes'
 
 import chatRouter from './routes/chats.routes';
 
@@ -35,10 +36,12 @@ app.use(express.urlencoded({ extended: true }));
 app.use('/api/v1/trips/', tripRouter);
 app.use('/api/v1/users/', userRouter);
 
+
 app.use('/api/v1/roles', rolesRouter);
+app.use('/api/v1/accommodations', accommodationRouter);
 app.use('/api/v1/companies', companiesRouter);
 app.use('/api/v1/bookings', bookingsRouter);
-app.use('/api/v1/accommodations', accommodationRouter);
+app.use('/api/v1/notifications/', notificationRouter)
 app.use('/api/v1/feedback', feedbackRouter);
 
 app.use('/api/v1/chat',chatRouter);
@@ -53,7 +56,6 @@ app.get('/', (req, res) => {
 const port = process.env.PORT || 8001,
   server = http.createServer(app).listen(port, async () => {
     console.log(`Server started on port ${port}!`);
-    await sequelize.authenticate();
     console.log('Database connected . . .');
   });
 
